# FutureAffinity_PyTorch

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  data-and-weights.md  data-engineering.md  evaluation.md  limitations.md  roadmap.md  scaling.md
docs/adr/: 0001-tokenization.md  0002-non-equivariant-plus-augmentation.md  0003-edm-diffusion.md  0004-multitask-masking.md  0005-energy-head.md  README.md
scripts/: cache_esm_embeddings.py  download_pdbbind_sample.py  evaluate.py  run_demo.py
src/futureaffinity/: __init__.py  chem.py  config.py  geometry.py
src/futureaffinity/data/: bindingdb.py  datatypes.py  esm_embeddings.py  ligand_rdkit.py  pdbbind.py  rcsb.py  synthetic.py
src/futureaffinity/datasources/: analytical_docking.py  base.py  mock_docking.py  openmm_adapter.py  vina_adapter.py
src/futureaffinity/evaluation/: metrics.py
src/futureaffinity/inference/: predict.py
src/futureaffinity/losses/: multitask.py
src/futureaffinity/model/: diffusion.py  embedding.py  model.py  pairformer.py
src/futureaffinity/model/heads/: affinity.py  confidence.py  contacts.py  ddg.py  uncertainty.py
src/futureaffinity/training/: distributed.py  metrics.py  train.py
tests/: test_data.py  test_datasources.py  test_diffusion.py  test_equivariance.py  test_heads.py  test_losses.py  test_metrics.py  test_model_end_to_end.py  test_overfit.py  test_pairformer.py  test_real_data_paths.py  test_scale_hooks.py
tests/fixtures/: bindingdb_sample.tsv
tests/fixtures/pdbbind/9xyz/: 9xyz_ligand.sdf
tests/fixtures/pdbbind/index/: INDEX_general_PL_data.2020
