[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "futureaffinity-pytorch"
version = "0.1.0"
description = "Pure PyTorch multi-task co-folding + affinity foundation model."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "FutureAffinity contributors" }]
dependencies = ["torch>=2.2", "numpy>=1.24"]

[project.optional-dependencies]
esm = ["fair-esm>=2.0"]
physics = ["rdkit>=2023.9", "openmm>=8.1"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
